# ota-policy-gate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/fixtures/: baseline.json  candidate-exception.json  candidate-risky.json  candidate-safe.json  policy-with-exception.json  policy.json  rollback-safe-candidate.json
src/ota_policy_gate/: __init__.py  __main__.py  cli.py  policy.py  reporting.py  validation.py
tests/: test_cli.py  test_fixtures.py  test_policy.py  test_reporting.py
