[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ota-policy-gate"
version = "0.1.0"
description = "Deterministic OTA release gate over caller-supplied assurance evidence"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "ota-policy-gate contributors"}]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
ota-policy-gate = "ota_policy_gate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
